// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QueuePlayer > matches the snapshot 1`] = `
"<div class="queueWrapper column"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS">queue-track-0-name</h2>
                </div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="fullWidth">
            <div class="inputRange standard fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:00">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <div class="buffer" style="width: 0px;"></div>
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><button class="centerItems buttonLink playPauseButton playPauseButton" type="button" title="Play current track">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play current track</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions"><button class="centerItems buttonLink" type="button" title="Like track">
              <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
            </button><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>"
`;

exports[`QueuePlayer > when currentTrack value does not have a favourite key > matches the snapshot 1`] = `
"<div class="queueWrapper column"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS">queue-track-0-name</h2>
                </div>
              </div>
            </div>
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content"><a data-test-id="link" class="link">album</a></div>
              </div>
            </div>
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <ul class="commaList">
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div class="fullWidth">
            <div class="inputRange fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:10">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <div class="buffer" style="width: 0px;"></div>
                </div>
                <div class="thumb" style="left: -6px;"></div>
                <div class="mBS strong smallFont tooltip" style="left: 0px;">00:00</div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button><button class="centerItems buttonLink" type="button" title="Rewind back 10 seconds">
              <phrewind class="icon" aria-hidden="true" size="24" weight="regular"></phrewind><span class="clamp text visuallyHidden">Rewind back 10 seconds</span>
            </button><button class="centerItems buttonLink playPauseButton playPauseButton" type="button" title="Play current track">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play current track</span>
            </button><button class="centerItems buttonLink" type="button" title="Fast forward back 30 seconds">
              <phfastforward class="icon" aria-hidden="true" size="24" weight="regular"></phfastforward><span class="clamp text visuallyHidden">Fast forward back 30 seconds</span>
            </button><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button></div>
          <div class="centerAll spaceBetween secondaryOptions">
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
                <phgear class="icon" aria-hidden="true" size="24" weight="regular"></phgear><span class="clamp text visuallyHidden">More</span>
              </button>
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>"
`;

exports[`QueuePlayer > when isPodcastEpisode value is true > matches the snapshot 1`] = `
"<div class="queueWrapper column"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS">queue-track-0-name</h2>
                </div>
              </div>
            </div>
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content"><a data-test-id="link" class="link">album</a></div>
              </div>
            </div>
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <ul class="commaList">
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div class="fullWidth">
            <div class="inputRange fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:10">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <div class="buffer" style="width: 0px;"></div>
                </div>
                <div class="thumb" style="left: -6px;"></div>
                <div class="mBS strong smallFont tooltip" style="left: 0px;">00:00</div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button><button class="centerItems buttonLink" type="button" title="Rewind back 10 seconds">
              <phrewind class="icon" aria-hidden="true" size="24" weight="regular"></phrewind><span class="clamp text visuallyHidden">Rewind back 10 seconds</span>
            </button><button class="centerItems buttonLink playPauseButton playPauseButton" type="button" title="Play current track">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play current track</span>
            </button><button class="centerItems buttonLink" type="button" title="Fast forward back 30 seconds">
              <phfastforward class="icon" aria-hidden="true" size="24" weight="regular"></phfastforward><span class="clamp text visuallyHidden">Fast forward back 30 seconds</span>
            </button><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button></div>
          <div class="centerAll spaceBetween secondaryOptions"><button class="centerItems buttonLink" type="button" title="Like track">
              <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
            </button>
            <!--v-if-->
            <!--v-if-->
            <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="More">
                <phgear class="icon" aria-hidden="true" size="24" weight="regular"></phgear><span class="clamp text visuallyHidden">More</span>
              </button>
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>"
`;

exports[`QueuePlayer > when isRadioStation value is false > when duration value is greater than 0 > matches the snapshot 1`] = `
"<div class="queueWrapper column"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS">queue-track-0-name</h2>
                </div>
              </div>
            </div>
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content"><a data-test-id="link" class="link">album</a></div>
              </div>
            </div>
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <ul class="commaList">
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div class="fullWidth">
            <div aria-label="Seek" class="inputRange fullWidth" aria-valuetext="00:00 of 00:10">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <div class="buffer" style="width: 0px;"></div>
                </div>
                <div class="thumb" style="left: -6px;"></div>
                <div class="mBS strong smallFont tooltip" style="left: 0px;">00:00</div>
              </div>
            </div>
            <div class="smallFont centerItems spaceBetween"><time>00:00</time><time>00:10</time></div>
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><button class="centerItems buttonLink playPauseButton playPauseButton" type="button" title="Play current track">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play current track</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions"><button class="centerItems buttonLink" type="button" title="Like track">
              <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
            </button><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>"
`;

exports[`QueuePlayer > when isRadioStation value is true > matches the snapshot 1`] = `
"<div class="queueWrapper column"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS">queue-track-0-name</h2>
                </div>
              </div>
            </div>
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content"><a data-test-id="link" class="link">album</a></div>
              </div>
            </div>
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <ul class="commaList">
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div class="fullWidth">
            <div class="inputRange fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:10">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <div class="buffer" style="width: 0px;"></div>
                </div>
                <div class="thumb" style="left: -6px;"></div>
                <div class="mBS strong smallFont tooltip" style="left: 0px;">00:00</div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><button class="centerItems buttonLink playPauseButton playPauseButton" type="button" title="Play current track">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play current track</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions"><button class="centerItems buttonLink" type="button" title="Like track">
              <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
            </button>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>"
`;

exports[`QueuePlayer > when isTrack value is true > when currentTrackMock.album is undefined > matches the snapshot 1`] = `
"<div class="queueWrapper column"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS">queue-track-0-name</h2>
                </div>
              </div>
            </div>
            <!--v-if-->
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <ul class="commaList">
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div class="fullWidth">
            <div class="inputRange standard fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:00">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <div class="buffer" style="width: 0px;"></div>
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><button class="centerItems buttonLink playPauseButton playPauseButton" type="button" title="Play current track">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play current track</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions"><button class="centerItems buttonLink" type="button" title="Like track">
              <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
            </button><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>"
`;

exports[`QueuePlayer > when isTrack value is true > when currentTrackMock.artists is an empty array > matches the snapshot 1`] = `
"<div class="queueWrapper column"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS">queue-track-0-name</h2>
                </div>
              </div>
            </div>
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content"><a data-test-id="link" class="link">album</a></div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="fullWidth">
            <div class="inputRange standard fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:00">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <div class="buffer" style="width: 0px;"></div>
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><button class="centerItems buttonLink playPauseButton playPauseButton" type="button" title="Play current track">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play current track</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions"><button class="centerItems buttonLink" type="button" title="Like track">
              <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
            </button><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>"
`;

exports[`QueuePlayer > when isTrack value is true > when the track does not have an album key > matches the snapshot 1`] = `
"<div class="queueWrapper column"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS">queue-track-0-name</h2>
                </div>
              </div>
            </div>
            <!--v-if-->
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <ul class="commaList">
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name">name</a></li>
                    <li data-test-id="artist-list-item"><a class="link" aria-label="Go to artist name1">name1</a></li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div class="fullWidth">
            <div class="inputRange standard fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:00">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <div class="buffer" style="width: 0px;"></div>
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><button class="centerItems buttonLink playPauseButton playPauseButton" type="button" title="Play current track">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play current track</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions"><button class="centerItems buttonLink" type="button" title="Like track">
              <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
            </button><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>"
`;

exports[`QueuePlayer > when isTrack value is true > when the track does not have an artists key > matches the snapshot 1`] = `
"<div class="queueWrapper column"><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Close queue menu">
    <phcaretdown class="icon" aria-hidden="true" size="24" weight="bold"></phcaretdown><span class="clamp text visuallyHidden"> Close queue menu </span>
  </button>
  <div class="column playerWrapper">
    <div class="wrapper">
      <div class="inner">
        <div class="imageWrapper">
          <div class="imageInner">
            <div class="preloadImageWrapper">
              <div class="centerAll preloadImage preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
            </div>
          </div>
        </div>
      </div>
      <div class="trackDetailsWrapper">
        <div class="mBAllL column trackDetails">
          <div>
            <div class="marqueeScroll" inert="" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content">
                  <h2 class="strong mBXS">queue-track-0-name</h2>
                </div>
              </div>
            </div>
            <div class="marqueeScroll" style="--animation-duration: 0ms;">
              <div class="bulletList inner">
                <div class="content"><a data-test-id="link" class="link">album</a></div>
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="fullWidth">
            <div class="inputRange standard fullWidth" aria-label="Seek" aria-valuetext="00:00 of 00:00">
              <div class="centerItems slider">
                <div class="progressWrapper">
                  <div class="process" style="width: 0px;"></div>
                  <div class="buffer" style="width: 0px;"></div>
                </div>
                <!--v-if-->
                <!--v-if-->
              </div>
            </div>
            <!--v-if-->
          </div>
          <div class="centerItems spaceBetween fullWidth secondaryOptions"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
              <phskipback class="icon" aria-hidden="true" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
            </button>
            <!--v-if--><button class="centerItems buttonLink playPauseButton playPauseButton" type="button" title="Play current track">
              <phplay class="icon" aria-hidden="true" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play current track</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
              <phskipforward class="icon" aria-hidden="true" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
            </button>
          </div>
          <div class="centerAll spaceBetween secondaryOptions"><button class="centerItems buttonLink" type="button" title="Like track">
              <phheart class="icon" aria-hidden="true" size="24" weight="regular"></phheart><span class="clamp text visuallyHidden">Like track</span>
            </button><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
              <phshuffle class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
            </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
              <phrepeat class="icon" aria-hidden="true" size="24" weight="regular" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
            </button>
            <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
              <phinfo class="icon" aria-hidden="true" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><button class="centerItems buttonLink centerAll fullWidth queueAction queueAction" type="button" title="Open queue list">
    <phplaylist class="icon" aria-hidden="true" size="24" weight="bold"></phplaylist><span class="clamp text visuallyHidden"> Open queue list </span>
  </button>
</div>"
`;
